--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-
+{
+  "name": "rachel-reed-ventures",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "13.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "^5.2.2"
+  }
+}
